[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum ={ version =  "0.8.4", features = ["tracing"] }
jsonwebtoken = "9.3.1"
scrypt = "0.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio", "time", "uuid"] }
time = { version = "0.3.41", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
